--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<b>This text is bold</b>
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Nathan Burns</title>
+  </head>
+  <body>
+    <h1>Nathan Burns</h1>
+    <p>My website</p>
+  </body>
+</html>
