--- a/index.html
+++ b/index.html
@@ -1,13 +1,9 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <link rel="stylesheet" href="style.css">
-    <meta charset="utf-8">
-    <title>Nathan Burns</title>
-  </head>
-  
-  <body>
+
+  <div class="header">
     <h1>Nathan Burns</h1>
-    <p>My website</p>
-  </body>
+    <p>This is very basic text<p>
+  </div>
+
 </html>
