--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!doctype html>
 <html lang="en">
+<head>
+  <link rel="stylesheet" href="style.css">
+</head>
 
   <div class="header">
     <h1>Nathan Burns</h1>
