Adding an image

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 
   <div class="header">
     <h1>Nathan Burns</h1>
-    <p>This is very basic text<p>
+  </div> 
+
+  <div class="left_image">
+    <img src="nathan.jpg" alt="Me" width="500" height="333">
+    <p>Me and Someone else</p>
   </div>
 
 </html>
