--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
   </div> 
 
   <div class="left_image">
+    <figure>
     <img src="nathan.jpg" alt="Me" width="500" height="333">
-    <p>Me and Someone else</p>
+    <figcaption>Davide Parise and Myself</figcaption>>
+    </figure>
   </div>
 
 </html>
