--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
   <div class="left_image">
     <figure>
-    <img src="nathan.jpg" alt="Me" width="500" height="333">
-    <figcaption>Davide Parise and Myself</figcaption>>
+      <img src="nathan.jpg" alt="Me" width="500" height="666">
+      <figcaption>Davide Parise and Myself</figcaption>
     </figure>
   </div>
 
