--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
   <div class="left_image">
     <figure>
       <img src="nathan.jpg" alt="Me" width="500" height="666">
-      <figcaption>Davide Parise and Myself</figcaption>
+      <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
     </figure>
   </div>
 
-  <div class="body">
-    <p>fdsajklhfdskajhfgdsakjhgfdsakjhgfdsakjhgfdksajhgfdskajhgfdskajhgfdskjahgfdskajhgfdskajhgfdksajhgfdksjahgfdskajhgfdkasjhgfdskajhgfdskajhgfdksjhagfdksjahgfdskajhgfdsakjhg</p>
-  </div>  
 
 </html>
