--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img src="nathan.jpg" alt="Me" width="500" height="666">
       <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
     </figure>
+    <p>My research interests lie in geometric analysis.</p>
   </div>
 
 
