--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <h1>Nathan Burns</h1>
   </div> 
 
-  <div class="left_image">
+  <div class="body">
     <figure>
-      <img src="nathan.jpg" alt="Me" width="300" height="400">
+      <img src="nathan.jpg" alt="Me" class="image-left" width="350">
       <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
     </figure>
     <p>My research interests lie in geometric analysis.</p>
