--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <h1>Nathan Burns</h1>
   </div> 
 
-  <div class="body">
+  <div>
     <figure>
       <img src="nathan.jpg" alt="Me" class="image-left" width="350">
       <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
