--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <h1>Nathan Burns</h1>
   </div> 
 
-  <div>
-    <figure>
-      <img src="nathan.jpg" alt="Me" class="image-left" width="350">
-      <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
-    </figure>
+  <aside>
+    <div>
+      <figure>
+        <img src="nathan.jpg" alt="Me" width="350">
+        <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
+      </figure>
+    <aside>
     <p>My research interests lie in geometric analysis.</p>
   </div>
 
