--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <h1>Nathan Burns</h1>
   </div> 
 
+  <div>
   <aside>
-    <div>
       <figure>
         <img src="nathan.jpg" alt="Me" width="350">
         <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
       </figure>
-    <aside>
+  </aside>
     <p>My research interests lie in geometric analysis.</p>
   </div>
 
