--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <figcaption><a href="https://davideparise.github.io">Davide Parise</a> and myself</figcaption>
       </figure>
   </aside>
+    <h1>About Me
     <p>My research interests lie in geometric analysis.</p>
   </div>
 
