--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
 
   <div class="header">
     <h1>Nathan Burns</h1>
+    <nav>
+      <p> fdsafdsa </p>|
+      <a href="nathan.jpg"> ME </a> 
+    </nav>
   </div> 
 
   <div>
