--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="header">
     <h1>Nathan Burns</h1>
     <nav>
-      <p> fdsafdsa </p>|
+      <a href="nathan.jpg"> YOU</a>|
       <a href="nathan.jpg"> ME </a> 
     </nav>
   </div> 
