--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <div class="header">
     <h1>Nathan Burns</h1>
     <nav>
-      <a href="nathan.jpg">YOU </a> |
-      <a href="nathan.jpg"> ME </a> 
+      <a href="CV.pdf">CV </a> |
+      <a href="index.html"> About Me </a> 
     </nav>
   </div> 
 
