--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <div class="header">
     <h1>Nathan Burns</h1>
     <nav>
-      <a href="CV.pdf">CV </a> |
-      <a href="index.html"> About Me </a> 
+      <a href="index.html">About Me </a> |
+      <a href="CV.pdf"> CV </a>
     </nav>
   </div> 
 
