--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <div class="header">
     <h1>Nathan Burns</h1>
-    <h2><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville</h2>
+    <p><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville</p>
     <nav>
       <a href="index.html">About Me</a> |
       <a href="CV.pdf"> CV </a>
