--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <aside>
       <figure>
         <img src="nathan.jpg" alt="Me" width="350">
-        <figcaption>Myself (right) and <a href="https://davideparise.github.io">Davide Parise</a> (left) hiking in the Great Smokey Mountains</figcaption>
+        <figcaption>Myself (right) and <a href="https://davideparise.github.io">Davide Parise</a> (left) hiking in the \n Great Smokey Mountains</figcaption>
       </figure>
   </aside>
     <h1>About Me</h1>
