--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <div class="header">
     <h1>Nathan Burns</h1>
     <p><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville</p>
+    <p><img srs="mail.jpg" alt = "email" width = 30> nburns6(at)vols.utk.edu</p>
     <nav>
       <a href="index.html">About Me</a> |
       <a href="CV.pdf"> CV </a>
