--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
 
   <div class="header">
     <h1>Nathan Burns</h1>
-    <p><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville</p>
-    <p><img srs="mail.jpg" alt = "email" width = 30> nburns6(at)vols.utk.edu</p>
+    <nav>
+      <p><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville</p> | 
+      <p><img src="mail.jpg" alt = "email" width = 30> nburns6(at)vols.utk.edu</p>
+    </nav>
     <nav>
       <a href="index.html">About Me</a> |
       <a href="CV.pdf"> CV </a>
