--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <div class="header">
     <h1>Nathan Burns</h1>
     <nav>
-      <p><img src="institute.png" alt = "Institute" width = 30> University of Tennessee, Knoxville | <img src="mail.png" alt = "email" width = 30> nburns6(at)vols.utk.edu</p>
+      <p><img src="institute.jpg" alt = "Institute" width = 30> University of Tennessee, Knoxville | <img src="mail.jpg" alt = "email" width = 30> nburns6(at)vols.utk.edu</p>
     </nav>
     <nav>
       <a href="index.html">About Me</a> |
