--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </nav>
   </div> 
 
-  <div>
+  <div style="background-color: whitesmoke;">
   <aside>
       <figure>
         <img src="nathan.jpg" alt="Me" width="350">
