Add opacity to nav

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <nav>
       <p><img src="institute.png" alt = "Institute" width = 30> University of Tennessee, Knoxville | <img src="email.png" alt = "email" width = 30> <a href="mailto:nburns6@vols.utk.edu">nburns6@vols.utk.edu</a></p>
     </nav>
-    <nav>
+    <nav class="transbox">
       <a href="index.html">About Me</a> |
       <a href="CV.pdf"> CV</a> |
       <a href="research.html"> Research </a>
