Added a lot to research

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <nav class="transbox">
       <a href="index.html">About Me</a> |
       <a href="CV.pdf"> CV</a> |
-      <a href="research.html"> Research </a>
+      <a href="research.html"> Research </a> |
+      <a href="talks.html"> Talks </a> |
+      <a href="notes.html"> Notes </a> |
+      <a href="seminar.html"> UTK Geometric Analysis Seminar</a>
     </nav>
   </div> 
 
@@ -20,11 +23,25 @@
   <aside>
       <figure>
         <img src="nathan.jpg" alt="Me" width="350">
-        <figcaption>Myself (right) and <a href="https://davideparise.github.io">Davide Parise</a> (left).</figcaption>
+        <figcaption style="text-align: center;"><a href="https://davideparise.github.io">Davide Parise</a> (left) and Myself (right).</figcaption>
       </figure>
   </aside>
-    <h1>About Me</h1>
-    <p>My research interests lie in geometric analysis.</p>
+    <h1 style="text-align: center; font-size: 35px;" ><u>About Me</u></h1>
+
+    <p style="font-size: 20px;">
+      I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Previously I receieved my MMath
+      from the University of Edinburgh. I grew up in the United Kingdom near Leeds.
+    </p>
+
+    <p style="font-size: 20px;">
+      My research interests lie in the subject of geometric analysis, in particular the study of geometric evolution equations, 
+      which exists in the intersection between differential geometry and partial differential equations. 
+      The focus of my research thus far has concerned itself with the so-called free boundary curve shortening flow and the ancient solutions thereof.
+    </p>
+
+    <p style="font-size: 20px;">
+      Outside of mathematics, I enjoy hiking and, more recently, the sport of Curling.
+    </p>
   </div>
 
 
