--- a/research.html
+++ b/research.html
@@ -9,9 +9,37 @@
     <nav>
       <p><img src="institute.png" alt = "Institute" width = 30> University of Tennessee, Knoxville | <img src="email.png" alt = "email" width = 30> <a href="mailto:nburns6@vols.utk.edu">nburns6@vols.utk.edu</a></p>
     </nav>
-    <nav>
+    <nav class="transbox">
       <a href="index.html">About Me</a> |
-      <a href="CV.pdf"> CV </a> |
-      <a href="research.html"> Research </a>
+      <a href="CV.pdf"> CV</a> |
+      <a href="research.html"> Research </a> |
+      <a href="talks.html"> Talks </a> |
+      <a href="notes.html"> Notes </a> |
+      <a href="seminar.html"> UTK Geometric Analysis Seminar</a>
     </nav>
   </div> 
+
+  <div>
+  <aside>
+      <figure>
+        <img src="nathan.jpg" alt="Me" width="350">
+        <figcaption style="text-align: center;"><a href="https://davideparise.github.io">Davide Parise</a> (left) and Myself (right).</figcaption>
+      </figure>
+  </aside>
+    <h1 style="text-align: center; font-size: 35px;" ><u>Research</u></h1>
+
+    <h2 style="font-size: 30px;">Publications</h2>
+    <p style="font-size: 20px;">
+      1: <i> "Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains" </i> <br> &nbsp;&nbsp;&nbsp;- With Theodora Bourni and Spencer Catron. <br>
+      &nbsp;&nbsp;&nbsp; <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>The Journal of Geometric Analysis</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv Version</a>; <a href="1.bib"> bib </a>
+    </p>
+
+    <h2 style="font-size: 30px;">Preprints</h2>
+    <p style="font-size: 20px;">
+      To be populated.
+    </p>
+
+  </div>
+
+
+</html>
