--- a/seminar.html
+++ b/seminar.html
@@ -7,11 +7,7 @@
   <div class="header">
     <h1>UTK Geometric Analysis Seminar</h1>
     <nav class="transbox">
-      <a href="index.html">About Me</a> |
-      <a href="CV.pdf"> CV</a> |
-      <a href="research.html"> Research </a> |
-      <a href="talks.html"> Talks </a> |
-      <a href="notes.html"> Notes </a> |
+      <a href="index.html">Nathan Burns</a> |
       <a href="seminar.html"> UTK Geometric Analysis Seminar</a>
     </nav>
   </div> 
