(Semi) Finished Website

--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
     </p>
 
     <p style="font-size: 20px;">
+      During the Fall of 2024, I spent a month as a program associate at the SLMath (formerly the MSRI) for the program
+      <i>"New Frontiers in Curvature: Flows, General Relativity, Minimal Submanifolds, and Symmetry".</i> <br>
+      I also spent a week during the spring of 2025 as an academic visitor of the Australian National University
+    </p>
+
+    <p style="font-size: 20px;">
       My research interests lie in the subject of geometric analysis, in particular the study of geometric evolution equations, 
       which exists in the intersection between differential geometry and partial differential equations. 
       The focus of my research thus far has concerned itself with the so-called free boundary curve shortening flow and the ancient solutions thereof.
