--- a/research.html
+++ b/research.html
@@ -22,8 +22,8 @@
   <div>
   <aside>
       <figure>
-        <img src="nathan.jpg" alt="Me" width="350">
-        <figcaption style="text-align: center;"><a href="https://davideparise.github.io">Davide Parise</a> (left) and Myself (right).</figcaption>
+        <img src="fbcsf.png" alt="FBCSF" width="500">
+        <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
       </figure>
   </aside>
     <h1 style="text-align: center; font-size: 35px;" ><u>Research</u></h1>
