--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <p style="font-size: 20px;">
       During the Fall of 2024, I spent a month as a program associate at the SLMath (formerly the MSRI) for the program
       <i>"New Frontiers in Curvature: Flows, General Relativity, Minimal Submanifolds, and Symmetry".</i> <br>
-      I also spent a week during the spring of 2025 as an academic visitor of the Australian National University
+      I also spent a week during the spring of 2025 as an academic visitor of the Australian National University.
     </p>
 
     <p style="font-size: 20px;">
