--- a/talks.html
+++ b/talks.html
@@ -57,9 +57,9 @@
         November 2024 - <i>Geometry and Analysis of Special Structures on Manifolds</i> @ SLMath (Formerly the MSRI) <br>
         October 2024 - <i>Recent Progress on Geometric Analysis and Riemannian Geometry</i> @ SLMath (Formerly the MSRI) <br>
         July 2024 - <i>Bridging PDE and Geometric Flows</i> @ Cardiff University <br>
-        April 2024 - Kansas Geometric Analysis Conference @ Wichita State University <br> 
-        March 2024 - Geometric Flows and Relativity Workshop @ Punta Del Este (Uruguay) <br>
-        March 2024 - Geometric Flows and Relativity Summer School @ Univerisidad de La Rep&#250blica 
+        April 2024 - <i>Kansas Geometric Analysis Conference<i> @ Wichita State University <br> 
+        March 2024 - <i>Geometric Flows and Relativity Workshop</i> @ Punta Del Este (Uruguay) <br>
+        March 2024 - <i>Geometric Flows and Relativity Summer School</i> @ Univerisidad de La Rep&#250blica 
     </p>
   </div>
 </html>
