--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </p>
 
     <p style="font-size: 20px;">
-      Outside of mathematics, I enjoy hiking and, more recently, the sport of Curling.
+      Outside of mathematics, I enjoy hiking and, more recently, the sport of curling.
     </p>
   </div>
 
