--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
   </div> 
 
   <div>
-  <aside>
+  <aside style="padding-bottom: 50px;">
       <figure>
-        <img src="nathan.jpg" alt="Me" width="350">
-        <figcaption style="text-align: center;"><a href="https://davideparise.github.io">Davide Parise</a> (left) and Myself (right).</figcaption>
+        <img src="nathan.jpeg" alt="Me" width="350">
+        <figcaption style="text-align: center;">Overlooking lake Tahoe.</figcaption>
       </figure>
   </aside>
     <h1 style="text-align: center; font-size: 35px;" ><u>About Me</u></h1>
