--- a/research.html
+++ b/research.html
@@ -20,16 +20,16 @@
   </div> 
 
   <div>
-  <aside>
+  <aside style="padding-bottom: 50px;">
       <figure>
-        <img src="fbcsf.png" alt="FBCSF" width="500">
+        <img src="fbcsf.png" alt="FBCSF" width="300">
         <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
       </figure>
   </aside>
-    <h1 style="text-align: center; font-size: 35px;" ><u>Research</u></h1>
+    <h1 style="text-align: left; font-size: 35px;" ><u>Research</u></h1>
 
     <h2 style="font-size: 30px;">Publications</h2>
-    <p style="font-size: 20px;">
+    <p style="font-size: 20px; font-family: optima;">
       1: <i> "Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains" </i> <br> &nbsp;&nbsp;&nbsp;- With Theodora Bourni and Spencer Catron. <br>
       &nbsp;&nbsp;&nbsp; <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>The Journal of Geometric Analysis</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv Version</a>; <a href="1.bib"> bib </a>
     </p>
