--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
   </div> 
 
   <div>
-  <aside style="padding-bottom: 50px;">
+  <aside style="padding-bottom: 50px; float: right;">
       <figure>
         <img src="fbcsf.png" alt="FBCSF" width="300">
         <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
