--- a/research.html
+++ b/research.html
@@ -28,14 +28,14 @@
   </aside>
     <h1 style="text-align: left; font-size: 35px;" ><u>Research</u></h1>
 
-    <h2 style="font-size: 30px;">Publications</h2>
-    <p style="font-size: 20px; font-family: optima;">
+    <h2 style="font-size: 30px; padding-left: 20px;">Publications</h2>
+    <p style="font-size: 20px; font-family: optima; padding-left: 20px;">
       1: <i> "Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains" </i> <br> &nbsp;&nbsp;&nbsp;- With Theodora Bourni and Spencer Catron. <br>
       &nbsp;&nbsp;&nbsp; <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>The Journal of Geometric Analysis</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv Version</a>; <a href="1.bib"> bib </a>
     </p>
 
-    <h2 style="font-size: 30px;">Preprints</h2>
-    <p style="font-size: 20px;">
+    <h2 style="font-size: 30px; padding-left: 20px;">Preprints</h2>
+    <p style="font-size: 20px; padding-left: 20px;">
       To be populated.
     </p>
 
