--- a/research.html
+++ b/research.html
@@ -26,7 +26,7 @@
         <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
       </figure>
   </aside>
-    <h1 style="text-align: left; font-size: 35px;" ><u>Research</u></h1>
+    <h1 style="text-align: left; font-size: 35px; padding-left: 20px;" ><u>Research</u></h1>
 
     <h2 style="font-size: 30px; padding-left: 20px;">Publications</h2>
     <p style="font-size: 20px; font-family: optima; padding-left: 20px;">
