--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   </div> 
 
   <div>
-  <aside style="padding-bottom: 50px;">
+  <aside style="padding-bottom: 50px; float: right;">
       <figure>
         <img src="nathan.jpeg" alt="Me" width="350">
         <figcaption style="text-align: center;">Overlooking lake Tahoe.</figcaption>
