--- a/index.html
+++ b/index.html
@@ -26,26 +26,26 @@
         <figcaption style="text-align: center;">Overlooking lake Tahoe.</figcaption>
       </figure>
   </aside>
-    <h1 style="text-align: center; font-size: 35px;" ><u>About Me</u></h1>
+    <h1 style="text-align: center; font-size: 35px; padding-left: 20px;" ><u>About Me</u></h1>
 
-    <p style="font-size: 20px;">
+    <p style="font-size: 20px; padding-left: 20px;">
       I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Previously I receieved my MMath
       from the University of Edinburgh. I grew up in the United Kingdom near Leeds.
     </p>
 
-    <p style="font-size: 20px;">
+    <p style="font-size: 20px; padding-left: 20px;">
       During the Fall of 2024, I spent a month as a program associate at the SLMath (formerly the MSRI) for the program
       <i>"New Frontiers in Curvature: Flows, General Relativity, Minimal Submanifolds, and Symmetry".</i> <br>
       I also spent a week during the spring of 2025 as an academic visitor of the Australian National University.
     </p>
 
-    <p style="font-size: 20px;">
+    <p style="font-size: 20px; padding-left: 20px;">
       My research interests lie in the subject of geometric analysis, in particular the study of geometric evolution equations, 
       which exists in the intersection between differential geometry and partial differential equations. 
       The focus of my research thus far has concerned itself with the so-called free boundary curve shortening flow and the ancient solutions thereof.
     </p>
 
-    <p style="font-size: 20px;">
+    <p style="font-size: 20px; padding-left: 20px;">
       Outside of mathematics, I enjoy hiking and, more recently, the sport of curling.
     </p>
   </div>
