--- a/research.html
+++ b/research.html
@@ -32,7 +32,7 @@
     <p style="font-size: 20px; padding-left: 20px;">
       1: <i> Theodora Bourni, Nathan Burns, and Spencer Catron. "Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains". <br> &nbsp;&nbsp;&nbsp; In: The Journal of Geometric Analysis 35.7 (June
 2025), p. 210. issn: 1559-002X. </i> <br>
-      &nbsp;&nbsp;&nbsp; <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>Journal</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv</a>; <a href="1.bib"> bib </a>
+      <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>Journal</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv</a>; <a href="1.bib"> bib </a>
     </p>
 
     <h2 style="font-size: 30px; padding-left: 20px;">Preprints</h2>
