--- a/index.html
+++ b/index.html
@@ -42,7 +42,11 @@
     <p style="font-size: 20px; padding-left: 20px;">
       My research interests lie in the subject of geometric analysis, in particular the study of geometric evolution equations, 
       which exists in the intersection between differential geometry and partial differential equations. 
-      The focus of my research thus far has concerned itself with the so-called free boundary curve shortening flow and the ancient solutions thereof.
+      The focus of my research thus far has concerned itself with the so-called free boundary curve shortening flow and the ancient solutions thereof. 
+    </p>
+
+    <p style="font-size: 20px; padding-left: 20px">
+      I am co-organizing the geometric analysis seminar at the University of Tennessee for the 2025-2026 academic year.
     </p>
 
     <p style="font-size: 20px; padding-left: 20px;">
