--- a/seminar.html
+++ b/seminar.html
@@ -24,6 +24,9 @@
     <h2 style="text-align: center; font-size: 25px;">10/22 - Peter McGrath (NCSU)</h2>
     <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
+    <h2 style="text-align: center; font-size: 25px;">11/05 - Nick Edelen (Notre Dame)</h2>
+    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+
     <h2 style="text-align: center; font-size: 25px;">11/19 - Alec Payne (NCSU)</h2>
     <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
