--- a/seminar.html
+++ b/seminar.html
@@ -7,8 +7,9 @@
   <div class="header">
     <h1>UTK Geometric Analysis Seminar</h1>
     <nav class="transbox">
-      <a href="index.html">Nathan Burns</a> |
-      <a href="seminar.html"> UTK Geometric Analysis Seminar</a>
+      <a href="index.html">Back</a> |
+      <a href="seminar.html"> UTK Geometric Analysis Seminar</a> |
+      
     </nav>
   </div> 
 
