--- a/seminar.html
+++ b/seminar.html
@@ -16,20 +16,23 @@
   <div style="padding-left: 20px;">
     <h1 style="text-align: center; font-size: 35px;" ><u><b>Fall 2025 Schedule</b></u></h1>
     
-    <h2 style="text-align: center; font-size: 25px;">09/17 - Mohammad Ghomi (Georgia Tech)</h2>
-    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <h2 style="text-align: justify; font-size: 25px;">09/17 - Mohammad Ghomi (Georgia Tech)</h2>
+    <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
-    <h2 style="text-align: center; font-size: 25px;">10/15 - Kobe Marshall-Stevens (Johns Hopkins)</h2>
-    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <h2 style="text-align: justify; font-size: 25px;">10/15 - Kobe Marshall-Stevens (Johns Hopkins)</h2>
+    <p style="font-size: 20px; text-align: justify;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
-    <h2 style="text-align: center; font-size: 25px;">10/22 - Peter McGrath (NCSU)</h2>
-    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <h2 style="text-align: justify; font-size: 25px;">10/22 - Peter McGrath (NCSU)</h2>
+    <p style="font-size: 20px; text-align: justify;"><b>Title: Extremal Domains for the First Eigenvalue of the Laplacian.</b><br> <b>Abstract:</b> The Faber-Krahn inequality asserts that the round balls uniquely minimize the first eigenvalue of the Laplacian among domains in $\R^n$ with the same volume. In 1970, Serrin proved more generally that balls are the only critical points for the functional assigning a domain in $\R^n$ to its first eigenvalue. Much less is known about the analogous problem for domains in the round n-sphere, and for n=2, Souam conjectured (2005) the only critical domains are rotationally symmetric disks and annuli. I will discuss the construction of counterexamples (joint work with C. Hines and J. Kolesar) to this conjecture.</p>
+    
+    <h2 style="text-align: justify; font-size: 25px;">11/05 - Nick Edelen (Notre Dame)</h2>
+    <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
-    <h2 style="text-align: center; font-size: 25px;">11/05 - Nick Edelen (Notre Dame)</h2>
-    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <h2 style="text-align: justify; font-size: 25px;">11/12 - Arjun Sobnack (UT Austin)</h2>
+    <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
-    <h2 style="text-align: center; font-size: 25px;">11/19 - Alec Payne (NCSU)</h2>
-    <p style="font-size: 20px;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <h2 style="text-align: justify; font-size: 25px;">11/19 - Alec Payne (NCSU)</h2>
+    <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
   </div>
 
