--- a/research.html
+++ b/research.html
@@ -19,7 +19,7 @@
     </nav>
   </div> 
 
-  <div>
+  <div style = "text-align: justify;">
   <aside style="float: right;">
       <figure>
         <img src="fbcsf.png" alt="FBCSF" width="300">
