--- a/research.html
+++ b/research.html
@@ -35,7 +35,7 @@
       <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>Journal</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv</a>; <a href="1.bib"> bib </a>
     </p>
 
-    <h2 style="font-size: 30px; padding-left: 20px;">Preprints</h2>
+    <h2 style="font-size: 30px; padding-left: 20px;">In Preperation</h2>
     <p style="font-size: 20px; padding-left: 20px;">
       1: Theodora Bourni, Nathan Burns, and Mat Langford. <i>"Classification of Convex Ancient Solutions to the Free Boundary Curve Shortening Flow in Non-Compact Convex Domains".</i> <br> In Preperation.
     </p>
