--- a/talks.html
+++ b/talks.html
@@ -32,7 +32,7 @@
         <b>Title:</b> Ancient Solutions to Free Boundary Curve Shortening Flows
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>March 2025</b> - <i>Geometric Anaysis Seminar @ Australian National University</i><br> 
+        <b>March 2025</b> - <i>Geometric Analysis Seminar @ Australian National University</i><br> 
         <b>Title:</b> Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
