--- a/research.html
+++ b/research.html
@@ -20,7 +20,7 @@
   </div> 
 
   <div style = "text-align: justify;">
-  <aside style="float: right; padding: 5;">
+  <aside style="float: right; padding-bottom: 5;">
       <figure>
         <img src="fbcsf.png" alt="FBCSF" width="400">
         <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
