--- a/research.html
+++ b/research.html
@@ -20,10 +20,10 @@
   </div> 
 
   <div style = "text-align: justify;">
-  <aside style="float: right; padding-bottom: 5;">
+  <aside style="float: right; padding-bottom: 5px;">
       <figure>
         <img src="fbcsf.png" alt="FBCSF" width="400">
-        <figcaption style="text-align: center;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
+        <figcaption style="text-align: center; padding-bottom: 5px;">A Non-Compact Ancient Solution to the <br> Free Boundary Curve Shortening Flow</figcaption>
       </figure>
   </aside>
     <h1 style="text-align: left; font-size: 35px; padding-left: 20px;" ><u>Research</u></h1>
