--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <h1 style="text-align: center; font-size: 35px; padding-left: 20px;" ><u>About Me</u></h1>
 
     <p style="font-size: 20px; padding-left: 20px;">
-      I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Before coming to Tennessee I received my MMath from the University of Edinburgh. I grew up in the United Kingdom near Leeds
+      I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Before coming to Tennessee I received my MMath from the University of Edinburgh. I grew up in the United Kingdom near Leeds.
     </p>
 
     <p style="font-size: 20px; padding-left: 20px;">
