--- a/seminar.html
+++ b/seminar.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@4/tex-mml-chtml.js"></script>
 <head>
   <link rel="stylesheet" href="seminar.css">
 </head>
@@ -22,7 +23,7 @@
     <p style="font-size: 20px; text-align: justify;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
 
     <h2 style="text-align: justify; font-size: 25px;">10/22 - Peter McGrath (NCSU)</h2>
-    <p style="font-size: 20px; text-align: justify;"><b>Title: Extremal Domains for the First Eigenvalue of the Laplacian.</b><br> <b>Abstract:</b> The Faber-Krahn inequality asserts that the round balls uniquely minimize the first eigenvalue of the Laplacian among domains in R^n with the same volume. In 1970, Serrin proved more generally that balls are the only critical points for the functional assigning a domain in R^n to its first eigenvalue. Much less is known about the analogous problem for domains in the round n-sphere, and for n=2, Souam conjectured (2005) the only critical domains are rotationally symmetric disks and annuli. I will discuss the construction of counterexamples (joint work with C. Hines and J. Kolesar) to this conjecture.</p>
+    <p style="font-size: 20px; text-align: justify;"><b>Title: Extremal Domains for the First Eigenvalue of the Laplacian.</b><br> <b>Abstract:</b> The Faber-Krahn inequality asserts that the round balls uniquely minimize the first eigenvalue of the Laplacian among domains in \(\mathbb{R}^n\) with the same volume. In 1970, Serrin proved more generally that balls are the only critical points for the functional assigning a domain in \(\mathbb{R}^n\) to its first eigenvalue. Much less is known about the analogous problem for domains in the round \(n\)-sphere, and for \(n = 2\), Souam conjectured (2005) the only critical domains are rotationally symmetric disks and annuli. I will discuss the construction of counterexamples (joint work with C. Hines and J. Kolesar) to this conjecture.</p>
     
     <h2 style="text-align: justify; font-size: 25px;">11/05 - Nick Edelen (Notre Dame)</h2>
     <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
