--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -29,7 +30,7 @@
     <h1 style="text-align: center; font-size: 35px; padding-left: 20px;" ><u>About Me</u></h1>
 
     <p style="font-size: 20px; padding-left: 20px;">
-      I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Before coming to Tennessee I received my MMath from the University of Edinburgh. I grew up in the United Kingdom near Leeds.
+      I am currently a PhD student at the University of Tennessee, advised by <a href="https://web.math.utk.edu/~tbourni/">Theodora Bourni</a>. Before coming to Tennessee I received my MMath from the University of Edinburgh.
     </p>
 
     <p style="font-size: 20px; padding-left: 20px;">
