--- a/talks.html
+++ b/talks.html
@@ -28,6 +28,10 @@
 
     <h1 style="text-align: left; font-size: 35px; padding-left: 20px;"><u>Talks</u></h1>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
+        <b>October 2025</b> - <i>AMS Fall Central Meeting: AMS Special Session on Riemannian Geometry and Symmetry II @ Saint Louis University</i> <br> 
+        <b>Title:</b> Stability of Ancient Rays
+    </p>
+    <p style="text-align: left; font-size: 20px; padding-left: 20px;">
         <b>May 2025</b> - <i>Rutgers Gauge Theory, Low-Dimensional Topology, and Geometric Analysis @ Rutgers University</i> <br> 
         <b>Title:</b> Ancient Solutions to Free Boundary Curve Shortening Flows
     </p>
