--- a/seminar.html
+++ b/seminar.html
@@ -17,7 +17,7 @@
     <h1 style="text-align: center; font-size: 35px;" ><u><b>Fall 2025 Schedule</b></u></h1>
     
     <h2 style="text-align: justify; font-size: 25px;">09/17 - Mohammad Ghomi (Georgia Tech)</h2>
-    <p style="font-size: 20px; text-align: justify"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
+    <p style="font-size: 20px; text-align: justify"><b>Title:  Geometric Inequalities in Spaces of Non-Positive Curvature.</b><br> <b>Abstract:</b> We will survey a number of outstanding problems and recent results in the theory of Cartan-Hadamard manifolds, i.e., complete, simply connected spaces with nonpositive curvature. These are CAT(0) spaces which generalize the Euclidean and hyperbolic spaces and share many of their basic properties. For instance any pair of points may be connected by a unique geodesic, and thus notions of convexity are natural to study. Yet many basic questions concerning isoperimetric inequalities, total curvature of hypersurfaces, or even the structure of the convex hull of 3 points remain open.</p>
 
     <h2 style="text-align: justify; font-size: 25px;">10/15 - Kobe Marshall-Stevens (Johns Hopkins)</h2>
     <p style="font-size: 20px; text-align: justify;"><b>Title:</b> TBA <br> <b>Abstract:</b> TBA</p>
