--- a/research.html
+++ b/research.html
@@ -31,7 +31,7 @@
 
     <h2 style="font-size: 30px; padding-left: 20px;">In Preperation</h2>
     <p style="font-size: 20px; padding-left: 20px; padding-right: 20px;">
-      1: Theodora Bourni, Nathan Burns, and Mat Langford. <i>"Classification of Convex Ancient Solutions to the Free Boundary Curve Shortening Flow in Non-Compact Convex Domains".</i> <br> In Preperation.
+      1: Theodora Bourni, Nathan Burns, and Mat Langford. <i>"Classification of Convex Ancient Solutions to the Free Boundary Curve Shortening Flow in Non-Compact Convex Domains".</i> <br> In Preparation.
     </p>
 
   </div>
