--- a/research.html
+++ b/research.html
@@ -24,7 +24,7 @@
 
     <h2 style="font-size: 30px; padding-left: 20px;">Publications</h2>
     <p style="font-size: 20px; padding-left: 20px; padding-right: 20px;">
-      <span>&#8226;</span>1: Theodora Bourni, Nathan Burns, and Spencer Catron. <i>"Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains".</i> <br> In: The Journal of Geometric Analysis 35.7 (June
+      <span>&#8226;</span> Theodora Bourni, Nathan Burns, and Spencer Catron. <i>"Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains".</i> <br> In: The Journal of Geometric Analysis 35.7 (June
 2025), p. 210. issn: 1559-002X. <br>
       <a href="https://link.springer.com/article/10.1007/s12220-025-02036-x"> <i>Journal</i></a>; <a href="https://arxiv.org/abs/2404.08824"> arXiv</a>; <a href="1.bib"> bib </a>
     </p>
