--- a/talks.html
+++ b/talks.html
@@ -28,7 +28,8 @@
 
     <h1 style="text-align: left; font-size: 35px; padding-left: 20px;"><u>Talks</u></h1>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>October 2025</b> - <i>AMS Fall Central Meeting: AMS Special Session on Riemannian Geometry and Symmetry II @ Saint Louis University</i> <br> 
+        <b>October 2025</b> - <i>AMS Fall Central Meeting: AMS Special Session on Riemannian Geometry and Symmetry II</i> <br>
+        Saint Louis University <br> 
         <b>Title:</b> Stability of Ancient Rays
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
