--- a/talks.html
+++ b/talks.html
@@ -33,23 +33,28 @@
         <b>Title:</b> Stability of Ancient Rays
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>May 2025</b> - <i>Rutgers Gauge Theory, Low-Dimensional Topology, and Geometric Analysis @ Rutgers University</i> <br> 
+        <b>May 2025</b> - <b><i>Rutgers Gauge Theory, Low-Dimensional Topology, and Geometric Analysis</i></b> <br> 
+        <i>Rutgers University</i> <br>
         <b>Title:</b> Ancient Solutions to Free Boundary Curve Shortening Flows
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>March 2025</b> - <i>Geometric Analysis Seminar @ Australian National University</i><br> 
+        <b>March 2025</b> - <b><i>Geometric Analysis Seminar</i></b> <br> 
+        <i>Australian National University</i> <br>
         <b>Title:</b> Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>February 2025</b> - <i>MATRIX-MFO Tandem Workshop: Nonlinear Geometric Diffusion Equations @ MATRIX Institute</i><br> 
+        <b>February 2025</b> - <b><i>MATRIX-MFO Tandem Workshop: Nonlinear Geometric Diffusion Equations</i></b> <br>
+        <i>MATRIX Institute</i> <br>
         <b>Title:</b> Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>November 2024</b> - <i>Graduate Student Seminar @ SLMath (Formerly the MSRI)</i><br> 
+        <b>November 2024</b> - <b><i>Graduate Student Seminar</i></b> <br> 
+        <i>SLMath (Formerly the MSRI)</i> <br>
         <b>Title:</b> Ancient Solutions to Geometric Flows
     </p>
     <p style="text-align: left; font-size: 20px; padding-left: 20px;">
-        <b>March 2024</b> - <i>Geometric Flows and Relativity Workshop @ Punta Del Este (Uruguay)</i><br> 
+        <b>March 2024</b> - <b><i>Geometric Flows and Relativity Workshop</i></b> <br> 
+        <i>Punta Del Este (Uruguay)</i> <br>
         <b>Title:</b> Classification of Convex Ancient Solutions to Free Boundary Curve Shortening Flow in Convex Domains
     </p>
 
