Changes to CV and GA Seminar

--- a/seminar.html
+++ b/seminar.html
@@ -9,7 +9,8 @@
     <h1>UTK Geometric Analysis Seminar</h1>
     <nav class="transbox">
       <a href="index.html">Back</a> |
-      <a href="seminar.html"> UTK Geometric Analysis Seminar</a>
+      <a href="seminar1.html"> UTK Geometric Analysis Seminar</a> |
+      <a href="seminar.html"> Fall 2025</a> |
     </nav>
   </div> 
 
