--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
     <p style="font-size: 20px; padding-left: 20px;">
       Outside of mathematics, I enjoy hiking and, more recently, the sport of curling.
     </p>
+
+    <aside style="padding-bottom: 20px; float: center;">
+      <figure>
+        <img src="curling.png" alt="Curling" width="450">
+        <figcaption style="text-align: center;">Curling at the Knoxville Curling Club.</figcaption>
+      </figure>
+  </aside>
   </div>
 
 
